# llmchat-web

./: README.md  pyproject.toml
llmchat_web/: __init__.py  app.py  models.py  routes.py  services.py
llmchat_web/routes/: __init__.py  chat_routes.py  core_routes.py  ingest_routes.py  preset_routes.py  rag_routes.py  session_routes.py  settings_routes.py  workspace_routes.py
llmchat_web/static/css/: custom.css
llmchat_web/static/css/custom_themes/: chrome-neon.css  solarized-dark.css
llmchat_web/static/css/themes/: light.css  nocturne.css  photon.css  terminal_velocity.css
llmchat_web/static/js/: chat_ui.js  context_manager_ui.js  custom.js  ingestion_ui.js  llm_settings_ui.js  main_controller.js  prompt_manager_ui.js  prompt_template_ui.js  rag_ui.js  session_api.js  utils.js
llmchat_web/templates/: index.html  layout.html
